--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -91,7 +91,7 @@
     <string name="X_option_bob_filter_anthology_yes">Antologie</string>
     <string name="X_pg_general">Ogólne</string>
     <string name="X_pt_site_settings">Ustawienia strony internetowej</string>
-    <string name="tip_booklist_style_defaults">Możesz użyć tego ekranu, aby ustawić domyślną charakterystykę wszystkich stylów listy książek. Większość właściwości może być nadpisana przez poszczególne style, ale tutaj są zdefiniowane wartości domyślne. Możesz zmienić sposób wyświetlania list przy starcie i dostosować różne inne preferencje, które będą stosowane do wszystkich twoich stylów, jeśli to możliwe. Możesz także edytować menu stylów i same style.</string>
+    <string name="tip_booklist_style_defaults">Ten ekran służy do ustawiania domyślnych właściwości wszystkich stylów. Są one używane przez wszystkie wbudowane style i stanowią punkt wyjścia dla każdego stylu zdefiniowanego przez użytkownika.</string>
     <string name="X_txt_import_books_option_all_books">Nowe książki zostaną dodane. Istniejące książki zostaną zaktualizowane.</string>
     <string name="X_txt_import_books_option_new_and_changed">Importuj tylko książki, które są nowe lub zostały zaktualizowane w archiwum ostatnio. Jest to przydatne podczas synchronizacji dwóch urządzeń.</string>
     <string name="X_txt_thank_you">Dziękuję Ci!</string>
@@ -666,8 +666,8 @@
     <string name="tip_autorotate_camera_images">Jeśli zawsze obracasz obrazy z kamery w tym samym kierunku, spróbuj zmienić preferencje aplikacji, aby określić obrót, który ma zostać zastosowany automatycznie.</string>
     <string name="tip_book_list">Dotknięcie książki pokaże szczegóły książki. Długie naciśnięcie elementu na liście daje więcej opcji.</string>
     <string name="tip_book_search_by_text">Dodawanie wg ISBN jest zalecane - bardziej dokładne niż wg autora i tytułu. W niektórych książkach kod kreskowy znajdziesz wewnątrz okładki.</string>
-    <string name="tip_booklist_style_groups">Możesz użyć tego ekranu, aby zmodyfikować hierarchię nagłówków dla określonego stylu listy książek. Zaznaczenie wskazuje, że nagłówek zostanie wyświetlony na liście, odznacz, aby go ukryć i odwrotnie. Możesz zmienić kolejność hierarchii, przeciągając ikonę w skrajnym prawym rogu każdego wiersza w górę lub w dół.</string>
-    <string name="tip_booklist_style_properties">Możesz użyć tego ekranu, aby ustawić charakterystykę konkretnego stylu listy książek. Możesz zmienić nazwę, edytować grupy, aby zmienić hierarchię, i dostosować różne inne preferencje, aby stworzyć styl, który uznasz za przydatny.</string>
+    <string name="tip_booklist_style_groups">Ten ekran służy do modyfikowania hierarchii grup dla określonego stylu. \"Zaznaczenie\" oznacza, że grupa będzie widoczna na liście, \"odznaczenie\" powoduje jej ukrycie i odwrotnie.  Hierarchię można zmienić, przeciągając ikonę na końcu każdego wiersza w górę lub w dół.</string>
+    <string name="tip_booklist_style_properties">Ten ekran służy do ustawiania właściwości określonego stylu. Możesz zmienić nazwę, edytować grupy, aby zmienić hierarchię, i dostosować wiele innych preferencji, aby stworzyć styl, który uznasz za przydatny.</string>
     <string name="tip_booklist_styles_editor">Możesz użyć tego ekranu, aby dostosować listę stylów, które będą wyświetlane w domyślnym menu stylów. Zaznaczenie wskazuje, że styl zostanie wyświetlony na liście, odznacz, aby go ukryć i odwrotnie. Jeśli żaden styl nie jest zaznaczony, zostaną wyświetlone wszystkie style. Możesz zmienić kolejność hierarchii, przeciągając ikonę w skrajnym prawym rogu każdego wiersza w górę lub w dół. Długie naciśnięcie w dowolnym innym miejscu w rzędzie pozwoli Ci edytować lub klonować szczegóły określonego stylu. Jeśli sklonowałeś styl i zmieniłeś zdanie, musisz go usunąć samodzielnie.</string>
     <string name="tip_dialog_title">Wskazówka</string>
     <string name="tip_reset_all">Zresetuj wskazówki</string>
